# mailing_agent

./: .env.example  .gitignore  README.md  analysis_results_18082025_1356.json  app.py  config.py  debug_app.py  email_jvm_opportunity_18082025_1356.txt  enhanced_analysis_with_improved_logic.json  enhanced_analysis_with_meta_ads.json  enhanced_kaltakquise_email_palestra_fitness.txt  main.py  main_easy.py  pyproject.toml  requirements_fastapi.txt  results.xlsx  server.py  setup_config.py  smart_meta_search.py  start_tool.py  test_backend.py
exports/: company_analysis_0b06630a-9fbd-41de-9eff-f29d40d32c79.docx
src/agent/: configuration.py  debug_utils.py  graph.py  meta_ad_client.py  meta_api_utils.py  meta_intelligent_hybrid.py  prompts.py  state.py
